--- a/index.html
+++ b/index.html
@@ -264,7 +264,7 @@ from rtlsdr import RtlSdr sdr = RtlSdr() # configure device sdr.sample_rate = 2.
     <div class="content">
     <h1 class="article-title">
         <a href="https://erichuanhuan.github.io/post/20200116/">
-            one
+            爬虫下载电离图数据
         </a>
     </h1>
 
@@ -397,7 +397,7 @@ CREATE TABLE ais_message_5_realtime SELECT * FROM ais_message_5 WHERE 1=2
                     </li>
                 
                     <li>
-                        <a href="https://erichuanhuan.github.io/post/20200116/">one</a>
+                        <a href="https://erichuanhuan.github.io/post/20200116/">爬虫下载电离图数据</a>
                     </li>
                 
                     <li>
